# cnn-structural-pattern-scanner

./: .dockerignore  .gitignore  Dockerfile  README.md  data_engine_cv.py  model_cv.py  pyproject.toml  test.py  test_pipeline.py  train_cv.py
.github/workflows/: ci.yml
